[gd_scene load_steps=8 format=3 uid="uid://bnm3x14jy61xa"]

[ext_resource type="Script" path="res://Scripts/node_2d.gd" id="1_66wbs"]
[ext_resource type="Texture2D" uid="uid://dg3fieb52andr" path="res://Tilesets/Char_1.png" id="1_tr3p2"]
[ext_resource type="PackedScene" uid="uid://doxrgfjmxhgds" path="res://Scenes/dash.tscn" id="3_ikrsi"]

[sub_resource type="Animation" id="Animation_u7q4a"]
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_1gy8n"]
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kkkit"]
_data = {
"Idle": SubResource("Animation_u7q4a"),
"Walk": SubResource("Animation_1gy8n")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pr2b0"]
size = Vector2(38, 69)

[node name="Char_1" type="CharacterBody2D"]
collision_mask = 15
script = ExtResource("1_66wbs")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(1.48438, 1.48438)
texture = ExtResource("1_tr3p2")
hframes = 2
vframes = 2
metadata/_aseprite_wizard_config_ = {
"i_mode": -1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "AnimationPlayer",
"slice": "",
"source": "res://Characters/Char_1.aseprite"
}
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": true,
"layer_section": true,
"slice_section": true
}
metadata/_aseprite_wizard_source_file_hash_ = "3fd02dec6c0d9663fea997f6f8d798d5"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_kkkit")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_pr2b0")

[node name="AttackCD" type="Timer" parent="."]
wait_time = 3.0

[node name="StunCD" type="Timer" parent="."]

[node name="Dash" parent="." instance=ExtResource("3_ikrsi")]

[node name="DashCD" type="Timer" parent="."]
wait_time = 5.0

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.61, 1.61)

[connection signal="timeout" from="AttackCD" to="." method="_on_attack_cd_timeout"]
[connection signal="timeout" from="StunCD" to="." method="_on_stun_cd_timeout"]
[connection signal="timeout" from="DashCD" to="." method="_on_dash_cd_timeout"]
